--- a/martines_sanchez_sielskyi_tp_rbm.ipynb
+++ b/martines_sanchez_sielskyi_tp_rbm.ipynb
@@ -457,7 +457,7 @@
   },
   {
    "source": [
-    "> Le modèle est défini par deux hyperparamètres, les unités cachées et la variance ($\\sigma^2$) pour l'initialisation des poids ; le graphique ci-dessous montre comment, lorsque le nombre d'unités cachées augmente, l'erreur moyenne de reconstruction diminue, cela se reflète également dans les images générées. Avec seulement 100 unités cachées, le modèle n'est pas capable de reproduire correctement les images, en revanche, avec 500 et 1000 unités cachées il effectue des reconstructions de meilleure qualité. \n",
+    "> Le modèle est défini par deux hyperparamètres, les unités cachées et la variance ($\\sigma^2$) pour l'initialisation des poids; le graphique ci-dessous montre comment, lorsque le nombre d'unités cachées augmente, l'erreur moyenne de reconstruction diminue, cela se reflète également dans les images générées. Avec seulement 100 unités cachées, le modèle n'est pas capable de reproduire correctement les images, en revanche, avec 500 et 1000 unités cachées il effectue des reconstructions de meilleure qualité. \n",
     "\n",
     "> Le graphique montre comment la distance entre les courbes diminue à mesure que les unités augmentent, par conséquent, la différence de performance entre un modèle avec 1000 unités cachées et un autre avec seulement 500 n'est pas très significatif. Dans les expériences ultérieures, seules 500 unités cachées seront utilisées, car cette valeur permet d'avoir un équilibre entre le temps d'exécution et la qualité de la reconstruction."
    ],
@@ -541,7 +541,7 @@
   },
   {
    "source": [
-    "> L'autre hyper-paramètre du modèle ($\\sigma^2$) n'a pas le même comportement que les unités cachées, bien qu'en augmentant sa valeur l'erreur de reconstruction diminue, cela n'est vrai que jusqu'à un certain seuil, après quoi la performance du modèle commence à se dégrader, cela peut être vu dans le graphique et les images ci-dessous, avec $\\sigma^2 = 10$ l'erreur de reconstruction a un comportement étrange et l'image générée n'a aucune relation avec les classes utilisées pour l'entraînement.\n"
+    "> L'autre hyper-paramètre du modèle $\\sigma^2$ n'a pas le même comportement que les unités cachées, bien qu'en augmentant sa valeur l'erreur de reconstruction diminue, cela n'est vrai que jusqu'à un certain seuil, après quoi la performance du modèle commence à se dégrader. Cela peut être vu dans le graphique et les images ci-dessous, avec $\\sigma^2 = 10$ l'erreur de reconstruction a un comportement étrange et l'image générée n'a aucune relation avec les classes utilisées pour l'entraînement.\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -609,7 +609,7 @@
    "source": [
     "### Hyperparamètres d'entraînement\n",
     "\n",
-    "> Pour la partie formation, le taux d'apprentissage des hyperparamètres et la taille des lots ont été étudiés ; dans le premier cas, un désavantage important est constaté lors de l'utilisation de très petites valeurs (par exemple 0,001 et 0,01), par rapport à d'autres valeurs comme 0,05 et 0,1, d'autre part ces deux derniers obtiennent des résultats similaires dans l'erreur de reconstruction, mais ils diffèrent un peu dans l'épaisseur des images générées."
+    "> Pour la partie apprentissage, le taux d'apprentissage des hyperparamètres et la taille des *batches* ont été étudiés. Dans le premier cas, un désavantage important est constaté lors de l'utilisation de très petites valeurs (par exemple $0.001$ et $0.01$), par rapport à d'autres valeurs comme $0.05$ et $0.1$, d'autre part ces deux derniers fournissent des résultats similaires dans l'erreur de reconstruction, mais ils diffèrent un peu dans l'épaisseur des images générées."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -690,7 +690,7 @@
   },
   {
    "source": [
-    "> Des valeurs élevées de la taille des lots (par exemple 100) ralentissent l'apprentissage et, au bout de 500 époques, le modèle a un pire performance que pour des valeurs plus faibles. Afin d'obtenir de petits erreurs de reconstruction sans trop affecter le temps d'exécution, la taille du lot peut être fixée à 10 ou à des valeurs un peu plus élevées."
+    "> Des valeurs élevées de la taille des *batches* (par exemple $100$) ralentissent l'apprentissage et, au bout de $500$ époques, le modèle a un pire performance que pour des valeurs moindres. Afin d'obtenir de petits erreurs de reconstruction sans trop affecter le temps d'exécution, la taille du *batch* peut être fixée à $10$ ou à des valeurs un peu plus élevées."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -763,7 +763,7 @@
   },
   {
    "source": [
-    "> L'erreur moyenne de reconstruction n'est pas affectée par la variation du nombre de classes utilisées pour entraîner le modèle, mais on peut voir comment les images générées mélangent les modèles des différentes classes, ce qui est dû au fait que le RBM n'apprend pas les modèles des classes indépendamment, et dans le processus de génération il n'y a pas de distinction claire des caractéristiques des classes de base qui ont été combinées."
+    "> L'erreur moyenne de reconstruction n'est pas affectée par la variation du nombre de classes utilisées pour entraîner le modèle, mais on peut voir comment les images générées mélangent les modèles des différentes classes, ce qui est dû au fait que la RBM n'apprend pas les modèles des classes indépendamment, et dans le processus de génération il n'y a pas de distinction claire des caractéristiques des classes de base qui ont été combinées."
    ],
    "cell_type": "markdown",
    "metadata": {}
